--- a/src/main/resources/templates/input.html
+++ b/src/main/resources/templates/input.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="UTF-8">
-<title>Add/Edit Book</title>
+    <meta charset="UTF-8">
+    <title>Add/Edit Book</title>
+    <script th:src="@{/validation.js}"></script>
 </head>
 <body>
 <h1 th:text="${book.id} ? 'Edit Book' : 'Add Book'"></h1>
-<form action="#" th:action="@{/saveBook}" th:object="${book}" method="post">
+
+<form action="#" th:action="@{/saveBook}" th:object="${book}" method="post" id="bookForm">
     <input type="hidden" th:field="*{id}"/>
     <p>Title: <input type="text" th:field="*{title}" required="required"/></p>
     <p>Genre: <input type="text" th:field="*{genre}" required="required"/></p>
